<resources>
    <string name="app_name">MoviesStore</string>
    <string name="action_settings">Settings</string>
    <string name="movie_upcoming">Upcoming Movies</string>
    <string name="movie_released">Released Movies</string>
    <string name="movie_content">Movies Store</string>
    <string name="unexpected_error">Something went wrong. Please try again.</string>
    <string name="title_activity_movie_detail">MovieDetailActivity</string>
    <string name="description">Description</string>
    <string name="release_date">Release Date</string>
    <string name="director">Director</string>
    <string name="writer">Writer(s)</string>
    <string name="stars">Stars</string>
    <string name="movie_type">Type Of Movie</string>
    <string name="duration">Duration</string>
    <string name="title">Title</string>
    <string name="addMovie">Add Movie</string>

</resources>
