<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context="com.deepanshu.moviestore.storeone.views.activities.MovieDetailActivity">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/app_bar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/app_bar_height"
        android:fitsSystemWindows="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.design.widget.CollapsingToolbarLayout
            android:id="@+id/collapsing_toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed">

            <ImageView
                android:id="@+id/movieImage"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                app:layout_collapseMode="parallax"
                android:contentDescription="@string/app_name"/>

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                app:layout_collapseMode="pin" />
        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <!--<include layout="@layout/content_movie_detail" />-->
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:background="@color/white"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/movieTitle"
                android:textSize="@dimen/movie_detail_title_textsize"
                android:textColor="@color/colorAccent"
                android:maxLines="2"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/description"
                android:textSize="@dimen/movie_detail_label_textsize"
                android:textColor="@color/lebelColor"
                android:layout_marginTop="@dimen/movie_detail_layout_margintop" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movieDescription"
                android:textSize="@dimen/movie_detail_content_textsize"
                android:textColor="@color/textBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/release_date"
                android:textSize="@dimen/movie_detail_label_textsize"
                android:textColor="@color/lebelColor"
                android:layout_marginTop="@dimen/movie_detail_layout_margintop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/releaseDate"
                android:textSize="@dimen/movie_detail_content_textsize"
                android:textColor="@color/textBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/director"
                android:textSize="@dimen/movie_detail_label_textsize"
                android:textColor="@color/lebelColor"
                android:layout_marginTop="@dimen/movie_detail_layout_margintop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/director"
                android:textSize="@dimen/movie_detail_content_textsize"
                android:textColor="@color/textBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/writer"
                android:textSize="@dimen/movie_detail_label_textsize"
                android:textColor="@color/lebelColor"
                android:layout_marginTop="@dimen/movie_detail_layout_margintop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/writer"
                android:textSize="@dimen/movie_detail_content_textsize"
                android:textColor="@color/textBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/stars"
                android:textSize="@dimen/movie_detail_label_textsize"
                android:textColor="@color/lebelColor"
                android:layout_marginTop="@dimen/movie_detail_layout_margintop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/stars"
                android:textSize="@dimen/movie_detail_content_textsize"
                android:textColor="@color/textBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/movie_type"
                android:textSize="@dimen/movie_detail_label_textsize"
                android:textColor="@color/lebelColor"
                android:layout_marginTop="@dimen/movie_detail_layout_margintop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/movieType"
                android:textSize="@dimen/movie_detail_content_textsize"
                android:textColor="@color/textBlack" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration"
                android:textSize="@dimen/movie_detail_label_textsize"
                android:textColor="@color/lebelColor"
                android:layout_marginTop="@dimen/movie_detail_layout_margintop"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/duration"
                android:textSize="@dimen/movie_detail_content_textsize"
                android:textColor="@color/textBlack" />

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
